@@ -461,3 +461,4 @@ Issue #2228457 by johnv: Fixed menu_build should not be called in admin_ui insta
 Issue #2226781 by johnv: Removed Workfow Add form, in favour of Workflow Edit form.
 Issue #2128423 by johnv: Fixed small theming thingy in workflow_cleanup.pages.inc.
 Issue #2187321 by johnv: Added Workflow as an Exportable entity (not complete yet, but allows cloning).
+Issue #2226451 by johnv: Fixed workflow widget when creating a node, and only 1 state allowed: should move node to first state.
